Package: doFuture
=================

Version: 0.11.0-9000 [2021-01-02]

NEW FEATURES:

 * Now registerDoFuture() returns the previously set foreach backend, making it
   possible to reset the the foreach backend to the previous settings.
   
 * Add option 'doFuture.rng.onMisuse' which can be used to temporarily override
   option 'future.rng.onMisuse' when the doFuture adaptor is running.

 * Add option 'doFuture.workarounds', which can be set by environment variable
   'R_DOFUTURE_WORKAROUNDS' when the package is loaded.

 * Adding "BiocParallel.DoParam.errors" to option 'doFuture.workarounds' will
   prefix RngFutureError messages with "task <index> failed - " in order for
   such errors to be recognized by the BiocParallel DoParam backend.


Version: 0.11.0 [2020-12-11]

NEW FEATURES:

 * foreach() argument '.options.snow = list(preschedule = <logical>)' is now
   acknowledged as a fallback to analogous argument '.options.multicore' -
   two arguments defined by the 'doMC' and the 'doSNOW' packages and also
   used by the 'doParallel' package.  As before, argument '.options.future'
   will always take precedence if 'list(scheduling = <logical>/<numeric>)' or
   'list(chunk.size = <integer>)' is given.

 * Warnings and errors produced when using the RNG without using '%dorng%' of
   the 'doRNG' package are now tailored to the 'doFuture' package.

BUG FIXES:

 * foreach() argument '.noexport' was completely ignored by doFuture.

DEPRECATED AND DEFUNCT:

 * Removed defunct option 'doFuture.foreach.export' values 'automatic' and
   'automatic-unless-.export'. They were made defunct in doFuture 0.8.2.


Version: 0.10.0 [2020-09-23]

SIGNIFICANT CHANGES:

 * Package now only imports packages 'globals', 'iterators', 'parallel' and
   'utils' - packages that were attached previously.

NEW FEATURES:

 * %dorng% of the doRNG package no longer produces a warning on 'Foreach loop
   had changed the current RNG type: RNG was restored to same type, next state'